--- a/Introduction_to_nlp.ipynb
+++ b/Introduction_to_nlp.ipynb
@@ -26,12 +26,12 @@
         "tensorflow.__version__"
       ],
       "metadata": {
-        "id": "P-FwvkA70ii_",
-        "outputId": "a9e15eec-c988-48dc-db73-db2f29ae200d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "P-FwvkA70ii_",
+        "outputId": "a9e15eec-c988-48dc-db73-db2f29ae200d"
       },
       "execution_count": 5,
       "outputs": [
@@ -56,11 +56,11 @@
         "pip uninstall tensorflow"
       ],
       "metadata": {
-        "id": "twA-J2R90zQF",
-        "outputId": "7890f8da-9d35-413c-f577-01aa9b58fc43",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "twA-J2R90zQF",
+        "outputId": "7890f8da-9d35-413c-f577-01aa9b58fc43"
       },
       "execution_count": 6,
       "outputs": [
@@ -94,12 +94,12 @@
         "pip install tensorflow==2.7"
       ],
       "metadata": {
-        "id": "W1CYEZmA0-NJ",
-        "outputId": "9763d7a0-fcc5-492a-a325-620e6284374a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "W1CYEZmA0-NJ",
+        "outputId": "9763d7a0-fcc5-492a-a325-620e6284374a"
       },
       "execution_count": 7,
       "outputs": [
@@ -192,13 +192,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hjbdQqV4Mthe",
-        "outputId": "34d3d500-9cb7-492e-ef51-1714a643e9e7"
+        "outputId": "c2c717ae-41dd-4318-f822-84ba003791c2"
       },
       "outputs": [
         {
@@ -220,29 +220,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "og1I99e5Nn_a",
-        "outputId": "88915b1e-38cf-4e5e-8cdc-f09b5e1c5592"
+        "outputId": "fb032a1e-162d-4f48-a8aa-7f78d0279fac"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-05-10 02:30:08--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2022-05-10 03:17:07--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 10246 (10K) [text/plain]\n",
-            "Saving to: ‘helper_functions.py’\n",
+            "Saving to: ‘helper_functions.py.1’\n",
             "\n",
             "\rhelper_functions.py   0%[                    ]       0  --.-KB/s               \rhelper_functions.py 100%[===================>]  10.01K  --.-KB/s    in 0s      \n",
             "\n",
-            "2022-05-10 02:30:08 (96.3 MB/s) - ‘helper_functions.py’ saved [10246/10246]\n",
+            "2022-05-10 03:17:07 (66.3 MB/s) - ‘helper_functions.py.1’ saved [10246/10246]\n",
             "\n"
           ]
         }
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 21,
       "metadata": {
         "id": "O129JJfpQ2rw"
       },
@@ -264,29 +264,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 22,
       "metadata": {
         "id": "Q6f5DUhLRn0w",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fe9fd864-c592-48a1-b1a2-2b0ae586b3a3"
+        "outputId": "6f909f28-570c-4641-947d-77a26267a679"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-05-10 02:30:08--  https://storage.googleapis.com/ztm_tf_course/nlp_getting_started.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 108.177.13.128, 172.217.193.128, 172.217.204.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|108.177.13.128|:443... connected.\n",
+            "--2022-05-10 03:17:07--  https://storage.googleapis.com/ztm_tf_course/nlp_getting_started.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 172.217.204.128, 172.217.203.128, 172.253.123.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|172.217.204.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 607343 (593K) [application/zip]\n",
-            "Saving to: ‘nlp_getting_started.zip’\n",
+            "Saving to: ‘nlp_getting_started.zip.1’\n",
             "\n",
-            "\rnlp_getting_started   0%[                    ]       0  --.-KB/s               \rnlp_getting_started 100%[===================>] 593.11K  --.-KB/s    in 0.004s  \n",
+            "\r          nlp_getti   0%[                    ]       0  --.-KB/s               \rnlp_getting_started 100%[===================>] 593.11K  --.-KB/s    in 0.007s  \n",
             "\n",
-            "2022-05-10 02:30:08 (155 MB/s) - ‘nlp_getting_started.zip’ saved [607343/607343]\n",
+            "2022-05-10 03:17:07 (85.7 MB/s) - ‘nlp_getting_started.zip.1’ saved [607343/607343]\n",
             "\n"
           ]
         }
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "01DGQV3rV1nf"
       },
-      "execution_count": 12,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -325,7 +325,7 @@
       "metadata": {
         "id": "39OKup18mufH"
       },
-      "execution_count": 13,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -336,7 +336,7 @@
       "metadata": {
         "id": "8A8fy87QWQxG"
       },
-      "execution_count": 14,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -347,7 +347,7 @@
       "metadata": {
         "id": "whjyFWcim2TA"
       },
-      "execution_count": 15,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -361,9 +361,9 @@
           "height": 206
         },
         "id": "J7ZkTL-fm8C4",
-        "outputId": "06f05d04-0b47-461b-818b-c7b4ebf8bf3f"
+        "outputId": "d19b5ab2-cf75-4f39-8f9f-9e04f1a7269b"
       },
-      "execution_count": 16,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +385,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-453d3b51-106a-47a3-bafc-0d6f2ddfb15c\">\n",
+              "  <div id=\"df-b92ff9c3-a7ec-47fa-89c2-a0c889df4f86\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -456,7 +456,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-453d3b51-106a-47a3-bafc-0d6f2ddfb15c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b92ff9c3-a7ec-47fa-89c2-a0c889df4f86')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -507,12 +507,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-453d3b51-106a-47a3-bafc-0d6f2ddfb15c button.colab-df-convert');\n",
+              "          document.querySelector('#df-b92ff9c3-a7ec-47fa-89c2-a0c889df4f86 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-453d3b51-106a-47a3-bafc-0d6f2ddfb15c');\n",
+              "          const element = document.querySelector('#df-b92ff9c3-a7ec-47fa-89c2-a0c889df4f86');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -535,7 +535,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 27
         }
       ]
     },
@@ -551,9 +551,9 @@
           "height": 206
         },
         "id": "qeLhHcaknBUi",
-        "outputId": "c5239292-1e5b-43db-e6fe-5dc3ba2ce9a8"
+        "outputId": "ab18e2a2-8a26-4166-d603-2c4a794aa055"
       },
-      "execution_count": 17,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -575,7 +575,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5d7aa399-852c-4908-bea8-0aed2386ca88\">\n",
+              "  <div id=\"df-ee7cbdc4-bc53-4367-b7a6-d35febc4f131\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -646,7 +646,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5d7aa399-852c-4908-bea8-0aed2386ca88')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ee7cbdc4-bc53-4367-b7a6-d35febc4f131')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -697,12 +697,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5d7aa399-852c-4908-bea8-0aed2386ca88 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ee7cbdc4-bc53-4367-b7a6-d35febc4f131 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5d7aa399-852c-4908-bea8-0aed2386ca88');\n",
+              "          const element = document.querySelector('#df-ee7cbdc4-bc53-4367-b7a6-d35febc4f131');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -725,7 +725,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 28
         }
       ]
     },
@@ -740,9 +740,9 @@
           "height": 206
         },
         "id": "ubELJLGLnIv4",
-        "outputId": "db03ac3e-5e8a-4e87-dc6a-36c1ef0ad668"
+        "outputId": "b371bc49-d277-4d2b-eb44-2cc1cad4837b"
       },
-      "execution_count": 18,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,7 +757,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-40a1da17-9876-423e-a5a8-206871979951\">\n",
+              "  <div id=\"df-ec21119d-9ae7-4d46-b7d1-8c09a9eb6114\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -822,7 +822,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-40a1da17-9876-423e-a5a8-206871979951')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec21119d-9ae7-4d46-b7d1-8c09a9eb6114')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -873,12 +873,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-40a1da17-9876-423e-a5a8-206871979951 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ec21119d-9ae7-4d46-b7d1-8c09a9eb6114 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-40a1da17-9876-423e-a5a8-206871979951');\n",
+              "          const element = document.querySelector('#df-ec21119d-9ae7-4d46-b7d1-8c09a9eb6114');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -901,7 +901,45 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train=test_df['text']\n",
+        "X_train"
+      ],
+      "metadata": {
+        "id": "gn3Ylp66_Jlm",
+        "outputId": "275bf28f-4144-4f83-cdbb-9f3e65fdfa1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0                      Just happened a terrible car crash\n",
+              "1       Heard about #earthquake is different cities, s...\n",
+              "2       there is a forest fire at spot pond, geese are...\n",
+              "3                Apocalypse lighting. #Spokane #wildfires\n",
+              "4           Typhoon Soudelor kills 28 in China and Taiwan\n",
+              "                              ...                        \n",
+              "3258    EARTHQUAKE SAFETY LOS ANGELES ÛÒ SAFETY FASTE...\n",
+              "3259    Storm in RI worse than last hurricane. My city...\n",
+              "3260    Green Line derailment in Chicago http://t.co/U...\n",
+              "3261    MEG issues Hazardous Weather Outlook (HWO) htt...\n",
+              "3262    #CityofCalgary has activated its Municipal Eme...\n",
+              "Name: text, Length: 3263, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
         }
       ]
     },
@@ -913,13 +951,13 @@
       ],
       "metadata": {
         "id": "AfjyFwZAns3t",
-        "outputId": "a983b923-26aa-4c6c-d72f-ecb84ddfabfd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "1b413d3d-b0ab-4dee-a35c-7692c323ad2e"
       },
-      "execution_count": 2,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -932,7 +970,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 30
         }
       ]
     },
@@ -944,19 +982,67 @@
       "metadata": {
         "id": "ZG7w8JYI3ryE"
       },
-      "execution_count": 10,
+      "execution_count": 31,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "tf.__Version__"
+        "textvectorizer=TextVectorization(output_sequence_length=15,pad_to_max_tokens=True,max_tokens=1000)"
       ],
       "metadata": {
         "id": "i8ypUrVLvjVf"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sent=test_df['text'][0]"
+      ],
+      "metadata": {
+        "id": "glXb2B4u-DYa"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=textvectorizer.adapt([sent])"
+      ],
+      "metadata": {
+        "id": "nmahSNWVy_ym"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "textvectorizer(\"Its raining heavily outside\")"
+      ],
+      "metadata": {
+        "id": "sZc3Brny-J-Q",
+        "outputId": "ace3fa65-f700-43ad-b1b0-92f0e5807123",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(15,), dtype=int64, numpy=array([1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -964,7 +1050,7 @@
         ""
       ],
       "metadata": {
-        "id": "nmahSNWVy_ym"
+        "id": "JW01welL-jXg"
       },
       "execution_count": null,
       "outputs": []
@@ -975,7 +1061,7 @@
     "colab": {
       "name": "Introduction_to_nlp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjuosoN/inUKeNE+hx9JZG",
+      "authorship_tag": "ABX9TyM7oXL7/Dil+fj5GKNU1GsU",
       "include_colab_link": true
     },
     "kernelspec": {
