--- a/Introduction_to_nlp.ipynb
+++ b/Introduction_to_nlp.ipynb
@@ -909,45 +909,19 @@
       "cell_type": "code",
       "source": [
         "X_train=test_df['text']\n",
-        "X_train"
+        "X_train\n",
+        "Y_train=shuffled_train_dataset[\"target\"]"
       ],
       "metadata": {
-        "id": "gn3Ylp66_Jlm",
-        "outputId": "275bf28f-4144-4f83-cdbb-9f3e65fdfa1c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "gn3Ylp66_Jlm"
       },
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0                      Just happened a terrible car crash\n",
-              "1       Heard about #earthquake is different cities, s...\n",
-              "2       there is a forest fire at spot pond, geese are...\n",
-              "3                Apocalypse lighting. #Spokane #wildfires\n",
-              "4           Typhoon Soudelor kills 28 in China and Taiwan\n",
-              "                              ...                        \n",
-              "3258    EARTHQUAKE SAFETY LOS ANGELES ÛÒ SAFETY FASTE...\n",
-              "3259    Storm in RI worse than last hurricane. My city...\n",
-              "3260    Green Line derailment in Chicago http://t.co/U...\n",
-              "3261    MEG issues Hazardous Weather Outlook (HWO) htt...\n",
-              "3262    #CityofCalgary has activated its Municipal Eme...\n",
-              "Name: text, Length: 3263, dtype: object"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 49
-        }
-      ]
+      "execution_count": 55,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "import tensorflow as tf\n",
-        "tf.__version__"
+        "import tensorflow as tf"
       ],
       "metadata": {
         "id": "AfjyFwZAns3t",
@@ -1010,12 +984,12 @@
     {
       "cell_type": "code",
       "source": [
-        "a=textvectorizer.adapt([sent])"
+        "a=textvectorizer.adapt([X_train])"
       ],
       "metadata": {
         "id": "nmahSNWVy_ym"
       },
-      "execution_count": 45,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -1024,23 +998,180 @@
         "textvectorizer(\"Its raining heavily outside\")"
       ],
       "metadata": {
-        "id": "sZc3Brny-J-Q",
-        "outputId": "ace3fa65-f700-43ad-b1b0-92f0e5807123",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sZc3Brny-J-Q",
+        "outputId": "c975ee22-fc26-4bda-db01-9b178aaa67b6"
       },
-      "execution_count": 47,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(15,), dtype=int64, numpy=array([1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])>"
+              "<tf.Tensor: shape=(15,), dtype=int64, numpy=\n",
+              "array([ 48,   1,   1, 999,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+              "         0,   0])>"
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "JW01welL-jXg"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rand_sent=random.choice(X_train)\n",
+        "rand_sent"
+      ],
+      "metadata": {
+        "id": "8G5EBqfoAE3o",
+        "outputId": "4542754c-7646-42ee-dcc7-d19b5c112acc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Storm rolling into Hilton Head gonna be fun'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "textvectorizer(rand_sent)"
+      ],
+      "metadata": {
+        "id": "-UHQQtXUAMSP",
+        "outputId": "19e06fc3-d087-4d4d-a5d1-e8da338181a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(15,), dtype=int64, numpy=\n",
+              "array([ 96,   1,  73,   1, 519, 222,  22, 767,   0,   0,   0,   0,   0,\n",
+              "         0,   0])>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Get the total unique words.**"
+      ],
+      "metadata": {
+        "id": "p-OJg9HNAhgr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vocab=textvectorizer.get_vocabulary()\n",
+        "print(vocab)"
+      ],
+      "metadata": {
+        "id": "k8UN7hhQAQkI",
+        "outputId": "77763161-2015-4227-89a0-32ee0b46428b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['', '[UNK]', 'the', 'a', 'to', 'in', 'of', 'and', 'i', 'is', 'on', 'for', 'you', 'my', 'it', 'by', 'with', 'this', 'that', 'at', 'are', 'from', 'be', 'was', 'as', 'like', 'your', 'out', 'amp', 'no', 'just', 'not', 'up', 'have', 'we', 'im', 'will', 'me', 'so', 'but', 'all', 'after', 'if', 'fire', 'more', 'get', 'when', 'via', 'its', 'an', 'new', 'how', 'about', 'he', 'has', 'news', 'or', 'one', 'now', 'people', 'they', 'what', 'who', 'would', 'do', '2', 'us', 'can', 'dont', 'emergency', 'over', 'were', 'there', 'into', 'attack', 'her', 'why', 'his', 'video', 'disaster', 'first', 'suicide', 'been', 'rt', 'police', 'off', 'fires', 'our', 'had', 'watch', 'them', 'still', 'some', '3', 'time', 'than', 'storm', 'hiroshima', 'full', 'got', 'crash', 'two', 'burning', 'going', 'today', 'see', 'love', 'body', 'last', 'know', 'go', 'think', 'make', 'life', 'world', 'nuclear', 'cant', 'buildings', 'need', 'forest', 'dead', 'bomb', 'back', 'right', 'even', 'bombing', '1', 'youtube', 'only', 'him', 'down', 'car', 'california', 'wild', 'day', 'their', 'post', 'never', 'man', 'because', 'accident', 'water', 'train', 'services', 'say', 'god', 'bomber', 'best', 'years', 'should', 'good', 'could', 'army', 'house', 'any', 'way', 'take', 'stop', 'mass', 'feel', 'collapse', 'black', 'being', '5', '\\x89Û', 'year', 'want', 'night', 'national', 'killed', 'many', 'before', 'where', 'war', 'u', 'too', 'then', 'really', 'near', 'live', 'hot', 'death', 'another', '\\x89ÛÒ', 'wildfire', 'she', 'other', 'old', 'lol', 'flood', 'during', 'does', 'again', 'work', 'summer', 'please', 'oh', 'did', 'change', '2015', 'truck', 'top', 'story', 'service', 'northern', 'may', 'let', 'ill', 'hope', '4', 'youre', 'w', 'show', 'severe', 'said', 'responders', 'red', 'read', 'pm', 'japan', 'injured', 'home', 'gonna', 'fatal', 'family', 'families', 'destroyed', 'demolished', 'terrorist', 'survive', 'shit', 'put', 'obama', 'mh370', 'kills', 'deluged', 'boat', 'ass', 'am', 'also', 'under', 'plan', 'photo', 'natural', 'much', 'landslide', 'help', 'game', 'food', 'floods', 'ever', 'come', 'call', 'women', 'while', 'well', 'trapped', 'thunderstorm', 'survived', 'state', 'seismic', 'saudi', 'river', 'past', 'park', 'murder', 'mosque', 'look', 'lightning', 'latest', 'heat', 'heard', 'failure', 'earthquake', 'due', 'city', 'boy', 'around', 'apocalypse', 'always', 'very', 'through', 'those', 'these', 'snowstorm', 'sirens', 'rubble', 'market', 'line', 'israel', 'hundreds', 'here', 'great', 'girl', 'coming', 'catastrophic', 'blast', 'wounded', 'week', 'thing', 'survivors', 'spill', 'someone', 'obliterate', 'liked', 'ive', 'hostage', 'homes', 'give', 'getting', 'gets', 'free', 'flames', 'drowning', 'drought', 'died', 'debris', 'crushed', 'content', 'cause', 'bloody', 'bag', 'atomic', 'annihilation', 'weather', 'violent', 'until', 'trying', 'try', 'trouble', 'three', 'thought', 'though', 'terrorism', 'stretcher', 'smoke', 'since', 'school', 'says', 'saw', 'rescue', 'oil', 'obliteration', 'obliterated', 'military', 'loud', 'looks', 'lava', 'injuries', 'found', 'fear', 'fall', 'drown', 'detonation', 'cyclone', 'caught', 'burned', 'bad', 'arson', 'air', 'against', '6', 'without', 'wind', 'wave', 'tonight', 'takes', 'stock', 'set', 'security', 'salt', 'rescued', 'report', 'released', 'refugees', 'rain', 'panicking', 'panic', 'next', 'migrants', 'meltdown', 'mayhem', 'massacre', 'little', 'hurricane', 'hijack', 'hailstorm', 'fucking', 'face', 'exploded', 'evacuation', 'electrocuted', 'destroy', 'damage', 'crashed', 'collapsed', 'check', 'caused', 'breaking', 'blown', 'blew', 'bioterrorism', 'big', 'bagging', 'baby', '\\x89ÛÓ', 'wounds', 'whole', 'volcano', 'use', 'ur', 'turkey', 'traumatised', 'trauma', 'tragedy', 'times', 'thunder', 'tell', 'sure', 'something', 'send', 'screams', 'screamed', 'save', 'run', 'rescuers', 'pkk', 'pay', 'ok', 'must', 'legionnaires', 'island', 'hijacking', 'hazardous', 'hazard', 'hail', 'fuck', 'far', 'eyewitness', 'everyone', 'emmerdale', 'electrocute', 'crush', 'calgary', 'bridge', 'bleeding', 'bang', 'avalanche', 'aug', 'attacked', 'airport', '70', 'white', 'west', 'weapon', 'thats', 'sound', 'screaming', 'remember', 'rainstorm', 'quarantine', 'play', 'most', 'low', 'longer', 'likely', 'light', 'least', 'keep', 'inundated', 'horse', 'hell', 'health', 'group', 'flattened', 'fan', 'dust', 'doesnt', 'devastated', 'detonated', 'destruction', 'desolate', 'demolish', 'county', 'collide', 'case', 'blight', 'australia', 'august', 'anniversary', '30', '15', 'yet', 'which', 'went', 'used', 'update', 'typhoon', 'tsunami', 't', 'suspect', 'structural', 'shooting', 'room', 'riot', 'razed', 'quarantined', 'pray', 'pic', 'part', 'order', 'omg', 'movie', 'missing', 'minute', 'lives', 'injury', 'id', 'horrible', 'head', 'fight', 'every', 'engulfed', 'drowned', 'displaced', 'didnt', 'desolation', 'deaths', 'damn', 'cross', 'cliff', 'catastrophe', 'casualties', 'businesses', 'building', 'blood', 'blazing', 'better', 'away', 'annihilated', 'airplane', 'aftershock', '16yr', 'zone', 'yes', 'wreck', 'wow', 'weapons', 'theres', 'such', 'street', 'south', 'song', 'site', 'sinkhole', 'shoulder', 'same', 'ruin', 'rise', 'rioting', 'reddit', 'real', 'pretty', 'malaysia', 'isnt', 'investigators', 'hit', 'hijacker', 'hes', 'hear', 'guy', 'government', 'goes', 'flooding', 'fedex', 'devastation', 'derailed', 'derail', 'curfew', 'crazy', 'confirmed', 'charged', 'casualty', 'brown', 'battle', 'ambulance', 'actually', 'ablaze', 'abc', '60', 'yours', 'warning', 'trench', 'theyre', 'strong', 'start', 'stand', 'sleeping', 'shift', 'sandstorm', 'safety', 's', 'public', 'power', 'pile', 'piece', 'own', 'open', 'officer', 'o', 'nearby', 'muslims', 'murderer', 'mudslide', 'marks', 'local', 'lets', 'led', 'kill', 'kids', 'israeli', 'houses', 'horror', 'heart', 'happened', 'gems', 'fukushima', 'feared', 'eyes', 'evacuated', 'end', 'ebay', 'done', 'die', 'detonate', 'days', 'data', 'chemical', 'bus', 'believe', 'bbc', 'american', 'ago', 'affected', '8', '70th', '7', '40', '20', '13', 'yesterday', 'wreckage', 'wont', 'watching', 'upheaval', 'twitter', 'tv', 'truth', 'tonto', 'tomorrow', 'thanks', 'taken', 'suspected', 'super', 'st', 'sorry', 'social', 'ross', 'reuters', 'quiz', 'prebreak', 'pick', 'person', 'pandemonium', 'outbreak', 'nothing', 'n', 'myself', 'music', 'move', 'might', 'media', 'living', 'issues', 'islamic', 'huge', 'hostages', 'hat', 'happy', 'green', 'firefighters', 'finally', 'fatality', 'famine', 'explode', 'everything', 'either', 'effect', 'drake', 'derailment', 'demolition', 'danger', 'crisis', 'ca', 'bush', 'brother', 'bring', 'bombed', 'blizzard', 'bags', 'america', 'already', 'yeah', 'wrecked', 'woman', 'whirlwind', 'whats', 'waves', 'waste', 'wait', 'virgin', 'unconfirmed', 'twister', 'tornado', 'told', 'things', 'text', 'swallowed', 'support', 'stay', 'soon', 'smh', 'shape', 'seen', 'seconds', 'second', 'season', 'saipan', 'road', 're\\x89Û', 'probably', 'press', 'possible', 'playing', 'plans', 'phone', 'north', 'neighbours', 'mop', 'money', 'mom', 'miss', 'militants', 'men', 'makes', 'made', 'mad', 'long', 'level', 'land', 'king', 'isis', 'india', 'history', 'happen', 'half', 'galactic', 'fun', 'flight', 'explosion', 'else', 'eat', 'e', 'dog', 'deal', 'continue', 'conclusively', 'comes', 'colour', 'collision', 'collided', 'claims', 'chinas', 'came', 'called', 'bioterror', 'arsonist', 'area', 'appears', 'apollo', 'anyone', 'ancient', 'almost', '100', '10', 'young', 'windstorm', 'wife', 'washington', 'wake', 'waiting', 'victims', 'ukraine', 'tried', 'transport', 'total', 'thursday', 'sleep', 'sinking', 'side', 'saying', 'saved', 'sad', 'running', 'rock', 'reason', 'property', 'problem', 'officials', 'offensive', 'mp', 'morning', 'michael', 'maybe', 'massive', 'm', 'literally', 'listen', 'link', 'lady', 'lack', 'knock', 'join', 'iran', 'human', 'hours', 'harm', 'hand', 'grows', 'funtenna', 'follow', 'find', 'fact', 'event', 'evacuate', 'enough', 'earth', 'doing', 'declares', 'cut', 'cree', 'cool', 'computers', 'close', 'climate', 'children', 'care', 'build', 'broken', 'brain', 'block', 'bigger', 'between', 'become', 'bc', 'bar', 'anthrax', 'aint', 'absolutely', '19', '12', 'womens', 'wasnt', 'warnings', 'village', 'udhampur', 'true', 'took', 'thinking', 'th', 'terror', 'team', 'talk', 'taking', 'sunk', 'storms', 'spring', 'spot', 'soudelor', 'seeing', 'searching', 'safe', 'russian', 'rn', 'reunion', 'reports', 'recent', 'reactor', 'r', 'pres', 'ppl', 'policy', 'plane', 'place', 'offroad', 'nepal', 'name', 'multiple', 'moment', 'minutes', 'memories', 'members', 'medical', 'making', 'lot', 'left', 'large', 'killing', 'issued', 'invoices', 'internally', 'insurance', 'ignition', 'hellfire', 'helicopter', 'hate', 'gt', 'google', 'giant', 'germs', 'four', 'flag', 'favorite', 'eye', 'evil', 'episode', 'double', 'cute', 'cover', 'course', 'cnn', 'christian', 'causes', 'business', 'burn', 'brooklyn', 'break', 'book', 'blaze', 'bestnaijamade', 'bank', 'ball', 'b', 'autistic', 'ashes', 'armageddon', 'anything', 'amazing', 'alive', 'x', 'wouldnt', 'words', 'wonder', 'weve', 'watched', 'wall', 'typhoondevastated', 'trent', 'training', 'town', 'thousands', 'terrible', 'temple', 'sun', 'sue', 'subreddits', 'states', 'stars', 'southern', 'sounds', 'signs', 'shows', 'shot', 'short', 'share', 'self', 'scene', 'research', 'remove', 'reality', 'radio', 'program', 'potus', 'pool', 'plant', 'picture', 'photos', 'peace', 'pakistan', 'outside']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(vocab)"
+      ],
+      "metadata": {
+        "id": "ksfkrlLkAtQg",
+        "outputId": "ca91c298-efa6-4b3a-9783-07ba5a5a68cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vocab[-5:]"
+      ],
+      "metadata": {
+        "id": "WaGlzzBVA5LY",
+        "outputId": "91539682-79c5-42f4-ba76-b764aa8b911f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['picture', 'photos', 'peace', 'pakistan', 'outside']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
         }
       ]
     },
@@ -1050,7 +1181,7 @@
         ""
       ],
       "metadata": {
-        "id": "JW01welL-jXg"
+        "id": "_Q_Dd0wPA8TY"
       },
       "execution_count": null,
       "outputs": []
@@ -1061,7 +1192,7 @@
     "colab": {
       "name": "Introduction_to_nlp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM7oXL7/Dil+fj5GKNU1GsU",
+      "authorship_tag": "ABX9TyOu64ph1gMiRGLV3wskTopo",
       "include_colab_link": true
     },
     "kernelspec": {
