--- a/Introduction_to_nlp.ipynb
+++ b/Introduction_to_nlp.ipynb
@@ -1372,14 +1372,20 @@
         "def scorecard(y_pred,y_true,model):\n",
         "  model_accuracy=accuracy_score(y_true,y_pred)\n",
         "  print(f\"The accuracy score for {model} is {model_accuracy*100:.2f}%\")\n",
-        "  precision,recall,f1_score,_=precision_recall_fscore_support(y_true,y_pred)\n",
+        "  precision,recall,f1_score,_=precision_recall_fscore_support(y_true,y_pred,)\n",
         "  print(f\"The precision score for {model} is {precision},recall is {recall} and f1_score is {f1_score}\")\n",
-        "\n"
+        "  model_result={\n",
+        "      'Accuracy':model_accuracy,\n",
+        "      'Precision':precision,\n",
+        "      'Recall':recall,\n",
+        "      'F1_score':f1_score\n",
+        "  }\n",
+        "  return model_result\n"
       ],
       "metadata": {
         "id": "Fbp4aty90FwE"
       },
-      "execution_count": 127,
+      "execution_count": 131,
       "outputs": []
     },
     {
@@ -1388,13 +1394,13 @@
         "scorecard(model_0_predictions,y_val,\"model_0\")"
       ],
       "metadata": {
-        "id": "o6TydDl-99n1",
-        "outputId": "2645627a-3d65-4f79-8500-a3983fae0ec2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "o6TydDl-99n1",
+        "outputId": "7e93600d-90e9-46b4-a8b5-2ed939fbd430"
       },
-      "execution_count": 128,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
@@ -1403,6 +1409,19 @@
             "The accuracy score for model_0 is 79.27%\n",
             "The precision score for model_0 is [0.74806202 0.88617886],recall is [0.93236715 0.62643678] and f1_score is [0.83010753 0.73400673]\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Accuracy': 0.7926509186351706,\n",
+              " 'F1_score': array([0.83010753, 0.73400673]),\n",
+              " 'Precision': array([0.74806202, 0.88617886]),\n",
+              " 'Recall': array([0.93236715, 0.62643678])}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 132
         }
       ]
     },
@@ -1423,7 +1442,7 @@
     "colab": {
       "name": "Introduction_to_nlp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPp3E+q7E1tM6gNvGXI3BG/",
+      "authorship_tag": "ABX9TyObnFrfQW02hbYRVfqk0vB0",
       "include_colab_link": true
     },
     "kernelspec": {
